deploy/kubernetes/kubernetes.yaml

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hujinbo
  namespace: blog
  labels:
    k8s.kuboard.cn/layer: web
    k8s.kuboard.cn/name: hujinbo
  annotations: {}
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s.kuboard.cn/layer: web
      k8s.kuboard.cn/name: hujinbo
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s.kuboard.cn/layer: web
        k8s.kuboard.cn/name: hujinbo
      annotations:
        kubectl.kubernetes.io/restartedAt: '2023-05-16T18:19:06+08:00'
    spec:
      containers:
        - name: hujinbo
          image: 'hujinbo/blog:latest'
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: hujinbo
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
kind: Service
apiVersion: v1
metadata:
  name: hujinbo
  namespace: blog
  labels:
    k8s.kuboard.cn/layer: web
    k8s.kuboard.cn/name: hujinbo
spec:
  ports:
    - name: 78pn5k
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    k8s.kuboard.cn/layer: web
    k8s.kuboard.cn/name: hujinbo
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hujinbo
  namespace: blog
  labels:
    k8s.kuboard.cn/layer: web
    k8s.kuboard.cn/name: hujinbo
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
spec:
  ingressClassName: ingress-nginx-controller
  tls:
    - hosts:
        - www.hujinbo.me
      secretName: hujinbo-crt
  rules:
    - host: www.hujinbo.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hujinbo
                port:
                  number: 80
